[tool.poetry]
name = "coding-trees"
version = "0.1.1"
description = ""
authors = ["tobiwankenobii <tobiv1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.8.0"
drf-spectacular = "^0.17.3"
djangorestframework-simplejwt = "^4.8.0"
psycopg2-binary = "^2.9.1"
martor = "^1.6.4"
structlog = "^21.1.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.1"
pytest = "^7.0.1"
pytest-django = "^4.4.0"
pytest-cov = "^2.12.1"
wemake-python-styleguide = "^0.15.3"
pytest-factoryboy = "^2.1.0"
Sphinx = "^4.1.2"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = "migrations"

[tool.pytest.ini_options]
testpaths = ["server"]
addopts = "--cov-fail-under=98 --no-migrations --cache-clear --cov=server --cov-report=html --cov-branch --no-cov-on-fail"

[tool.isort]
profile = "black"
line_length = 80
default_section = "THIRDPARTY"
known_first_party = ["server", "apps"]
